[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
alloy = { version = "0.6.4", features = [
    "contract",
    "network",
    "providers",
    "node-bindings",
    "rpc-types-trace",
    "signer-mnemonic",
    "eip712",
] }
axum = { version = "0.7.9", features = ["macros"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.41"
url = { version = "2.5.3", features = ["serde"] }
