[package]
name = "stoplight_client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
mish.path = "../mish"
stoplight_server.path = "../stoplight_server"
alloy.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
