[package]
name = "stoplight_server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
mish.path = "../mish"
alloy.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
